<resources>
    <string name="app_name">C3</string>
    <string name="odaberite_listu">Odaberite listu</string>
    <string name="izaberi">Izaberi</string>
    <string name="kreiraj_novu_listu">Kreiraj novu listu</string>
    <string name="pridruzi_se_listi">Pridruži se listi</string>
    <string name="odjava">Odjava</string>
    <string name="dodaj">Dodaj</string>
    <string name="obrisi">Obriši</string>
    <string name="prikazi_kod_liste">Prikaži kod liste</string>
    <string name="izmijeni">Izmijeni</string>
    <string name="dodavanje_artikla">Dodavanje artikla</string>
    <string name="potrebna_kolicina">Potrebna količina:</string>
    <string name="dodatne_informacije">Dodatne informacije:</string>
    <string name="napomene_za_kupovinu">Napomene za kupovinu</string>
    <string name="potvrdi">Potvrdi</string>
    <string name="nazad">Nazad</string>
    <string name="izmjena_artikla">Izmjena artikla</string>
    <string name="dodavanje_liste">Dodavanje liste</string>
    <string name="ime_liste">Ime liste</string>
    <string name="prijava">Prijava</string>
    <string name="korisnicko_ime">Korisničko ime</string>
    <string name="sifra">Šifra</string>
    <string name="nemate_racun">Nemate račun?</string>
    <string name="registracija">Registracija</string>
    <string name="ime">Ime</string>
    <string name="prezime">Prezime</string>
    <string name="potvrdi_sifru">Potvrdi šifru</string>
    <string name="ime_artikla">Ime artikla</string>
    <string name="kod_liste">Kod liste</string>
</resources>