<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="#e2f3f5"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="61dp"
        android:text="@string/odaberite_listu"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="272dp"
        android:layout_height="231dp"
        android:layout_marginTop="52dp"
        android:textColor="@color/black"
        android:backgroundTint="#e2f3f5"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/kreirajNovuListu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3d5af1"
        android:text="@string/kreiraj_novu_listu"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/pridruziSeListi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3d5af1"
        android:text="@string/pridruzi_se_listi"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kreirajNovuListu"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3d5af1"
        android:text="Profil"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pridruziSeListi"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/odjava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3d5af1"
        android:text="@string/odjava"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pridruziSeListi"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/help"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button1"
        app:backgroundTint="@null"
        android:text="H"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>